[project]
name = "py-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.2"
dependencies = []


[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true