[project]
name = "py-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.2"
dependencies = [
    "datasets>=4.2.0",
    "spacy>=3.8.7",
    "torch>=2.7.0",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true